Format requirements.txt for better readability

--- a/NYC-Road-Network-Analysis/requirements.txt
+++ b/NYC-Road-Network-Analysis/requirements.txt
@@ -1,1 +1,8 @@
-pandas numpy scikit-learn joblib streamlit folium streamlit-folium altair
+pandas
+numpy 
+scikit-learn 
+joblib 
+streamlit 
+folium 
+streamlit-folium 
+altair
